1. api for is_profile_completed
